Fix z-index

--- a/data/www/app/public/style/header.css
+++ b/data/www/app/public/style/header.css
@@ -31,6 +31,8 @@ a{
 .container{
     margin: 30px 20px;
     overflow: auto;
+
+    z-index: 100;
 }
 
 .site-content{
@@ -48,6 +50,8 @@ a{
     color: var(--header-second-color);
 
     background-color: var(--header-bg-color);
+
+    z-index: 1000;
 }
 
 .header_logo{
